tests/paczka1/small_fuzzy/33927365.err
Error in line 2: A156 S91 39,0
Error in line 6: cwu4GKCe S91 208,1
